// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/resolve resolvePackageFiles() clears npmrc and yarnrc fields 1`] = `
Array [
  Object {
    "content": Object {
      "name": "something",
      "renovate": Object {
        "automerge": true,
      },
      "version": "1.0.0",
    },
    "currentPackageJsonVersion": "1.0.0",
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "manager": "npm",
    "packageFile": "package.json",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() detect package.json and adds error if cannot parse (onboarding) 1`] = `Array []`;

exports[`manager/resolve resolvePackageFiles() detect package.json and throws error if cannot parse (onboarded) 1`] = `[Error: config-validation]`;

exports[`manager/resolve resolvePackageFiles() detects accompanying files 1`] = `
Array [
  Object {
    "content": Object {
      "name": "package.json",
      "version": "0.0.1",
    },
    "currentPackageJsonVersion": "0.0.1",
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "manager": "npm",
    "npmShrinkwrap": "npm-shrinkwrap.json",
    "npmrc": "npmrc",
    "packageFile": "package.json",
    "packageLock": "package-lock.json",
    "shrinkwrapYaml": "shrinkwrap.yaml",
    "yarnLock": "yarn.lock",
    "yarnrc": "yarnrc",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() skips if no content or no match 1`] = `Array []`;

exports[`manager/resolve resolvePackageFiles() strips npmrc with NPM_TOKEN 1`] = `
Array [
  Object {
    "content": Object {
      "name": "package.json",
      "version": "0.0.1",
    },
    "currentPackageJsonVersion": "0.0.1",
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "manager": "npm",
    "packageFile": "package.json",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() uses packageFiles if already configured and raises error if not found 1`] = `Array []`;
